# pura

./: .gitignore  Balance_Reactions.ipynb  LICENSE  README.md  clean_pistachio.py  manual_canonicalization.py  paper.md  pyproject.toml
.github/workflows/: ci.yml
app/: app.py
pura/: balance.py  compound.py  helpCompound.py  reaction.py  resolvers.py  units.py  utils.py
pura/data/: pura.db
pura/services/: __init__.py  cas.py  chemspider.py  cir.py  db.py  opsin.py  pubchem.py  service.py  stout.py
tests/: test_reaction.py  test_resolvers.py  test_services.py  test_units.py
tests/test_services/: test_pubchem.py
