[tool.poetry]
name = "pura"
version = "0.1.0"
description = "Clean chemical data quickly"
authors = ["Kobi Felton <kobi.c.f@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
