[tool.poetry]
name = "pura"
version = "0.1.1"
description = "Clean chemical data quickly"
authors = ["Kobi Felton <kobi.c.f@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
Pint = "^0.19.2"
pydantic = "^1.9.1"
tqdm = "^4.64.0"
aiohttp = "^3.8.1"
rdkit-pypi = "^2022.3.3"
lxml = "^4.9.0"
python-dotenv = "^0.20.0"
unicodedata2 = {version = "^14.0.0", optional = true}
pystow = {version = "^0.4.5", optional = true}
tensorflow-gpu = {version = "2.7.2", optional = true}
pandas = "^1.4.3"
ray = "^1.13.0"

[tool.poetry.extras]
stout = ["unicodedata2", "pystow", "tensorflow-gpu"]

[tool.poetry.dev-dependencies]
black = "^22.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
